--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,11 @@
   letter-spacing: 2px;
   font-family: 'Karla', sans-serif;
 }
+
+button {
+  border: none;
+  cursor: pointer;
+}
 /*body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
