--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,6 +28,11 @@ a:active, a:visited{color: inherit}
   font-size: 14px;
   line-height: 22px;
 }
+
+.large-text {
+  font-size: 18px;
+  line-height: 30px;
+}
 /*body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
