--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,14 +2,15 @@
   margin: 0;
   padding: 0;
   font-family: 'Karla', sans-serif;
+  cursor: default;
 }
 
 button {
   border: none;
-  cursor: pointer;
+  cursor: pointer !important;
 }
 
-a {text-decoration: none;}
+a {text-decoration: none; cursor: pointer !important;}
 a:active, a:visited{color: inherit} 
 
 .small-text {
